@@ -1,3 +1,8 @@
+2007-03-21  Neil Jagdish Patel  <njpatel@gmail.com>
+
+	* Additional launcher->window matching code, should now work for most 
+ 	  apps.
+
 2007-03-21  Varun Ratnakar  
 
 	* Support for international fonts in title 
